# libguestfs-rs

./: .gitignore  Cargo.toml  README.md
libguestfs/: Cargo.toml  test_base64_in-input.txt
libguestfs-sys/: Cargo.toml  build.rs  wrapper.h
libguestfs/src/: lib.rs
