[package]
name = "libguestfs-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings to libguestfs"
repository = "https://github.com/queer/libguestfs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
